--- a/resources/views/partials/components/rates-home.twig
+++ b/resources/views/partials/components/rates-home.twig
@@ -4,7 +4,7 @@
             <div class="crypto-icon">
                 <img src="{{ base_url() }}/assets/img/coins/bitcoin.png" alt="">
             </div>
-            <div class="crypto-title">Bitcoin  <span><span class="bitcoin" v-text="btc.pctchange"></span>%</span></div>
+            <div class="crypto-title">Bitcoin  <span class="bitcoin" v-text="btc.pctchange"></span></div>
             <div class="crypto-details bitcoin">
                 <small>GHS</small><span v-text="btc.price"></span>
             </div>
@@ -15,7 +15,7 @@
             <div class="crypto-icon">
                 <img src="{{ base_url() }}/assets/img/coins/etherum.png" alt="">
             </div>
-            <div class="crypto-title">Ethereum <span><span class="ethereum" v-text="eth.pctchange"></span%</span>></div>
+            <div class="crypto-title">Ethereum <span class="ethereum" v-text="eth.pctchange"></span></div>
             <div class="crypto-details ethereum">
                 <small>GHS</small><span v-text="eth.price"></span>
             </div>
@@ -26,7 +26,7 @@
             <div class="crypto-icon">
                 <img src="{{ base_url() }}/assets/img/coins/litecoin.png" alt="">
             </div>
-            <div class="crypto-title">Litecoin <span><span class="litecoin" v-text="ltc.pctchange"></span%</span>></div>
+            <div class="crypto-title">Litecoin <span class="litecoin" v-text="ltc.pctchange"></span></div>
             <div class="crypto-details litecoin">
                 <small>GHS</small><span v-text="ltc.price"></span>
             </div>
