--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6241,8 +6241,9 @@ error-device-content {
 }
 
 .crypto-feature .crypto-box {
+    width: 100%;
     display: -webkit-inline-box;
-    padding: 10px 25px 10px 10px;
+    padding: 10px 10px 10px 10px;
 }
 
 .crypto-feature .crypto-box div.crypto-icon img {
