--- a/resources/views/template/app.twig
+++ b/resources/views/template/app.twig
@@ -22,6 +22,6 @@
     {% block body %} {% endblock %}
     <script src="{{ base_url() }}/assets/js/app.js"></script>
     {% block scripts %} {% endblock %}
-    <script>var preloader = $("#preloader");setTimeout( function(){ preloader.fadeOut("slow");},7000);</script>
+    <script>var preloader = $("#preloader");setTimeout( function(){ preloader.fadeOut("slow");$("body").fadeIn();},7000);</script>
 </body>
 </html>
