--- a/resources/views/template/partials/html_blocks/navbar.twig
+++ b/resources/views/template/partials/html_blocks/navbar.twig
@@ -21,16 +21,21 @@
                             <li><a href="{{ path_for('buy-sell') }}">Buy/Sell</a></li>
                             <li><a href="{{ path_for('about-us') }}">About Us</a></li>
                             <li><a href="{{ path_for('contact-us') }}">Contact Us</a></li>
-                            <li><a href="{{ path_for('app.dashboard') }}">Dashboard</a></li>
-                            {% endif %}
+                            <li class="signin-button-holder">
+                                <a class="signin-button" href="{{ path_for('app.dashboard') }}">My Swap Dashboard</a>
+                            </li>
+                            {% else %}
                             <li class="dropdown">
-                                <a href="#">{{ user.userSession.user_id }} <i class="fa fa-caret-down"></i></a>
+                                <a href="#">
+                                    {{ user.userSession.user_id }} <i class="fa fa-caret-down"></i>
+                                </a>
                                 <ul class="dropdown-menu">
                                     <li><a href="{{ path_for('app.account-settings') }}">Account Settings</a></li>
                                     <li><a href="{{ path_for('app.help') }}">Help</a></li>
                                     <li><a href="{{ path_for('auth.sign-out') }}">Sign Out</a></li>
                                 </ul>
                             </li>
+                            {% endif %}
                         </ul>
                     </div>
                     {% else %}
