--- a/resources/views/website/home.twig
+++ b/resources/views/website/home.twig
@@ -5,7 +5,7 @@
     <div id="header-holder" class="homepage-header">
         <div class="bg-animation"></div>
         {% include 'template/partials/html_blocks/navbar.twig' %}
-        <div id="page-head" class="container-fluid inner-page">
+        <div id="page-head" class="container inner-page">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 text-center">
