--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6930,7 +6930,7 @@ div.crypto-bg-3::after {
 }
 
 #dashboard .nav.nav-pills.nav-stacked a {
-    font-size: 15px;
+    font-size: 1.1em;
     font-weight: 500;
     color: #777;
 }
