--- a/resources/views/partials/components/preloader.twig
+++ b/resources/views/partials/components/preloader.twig
@@ -1,3 +1,9 @@
+{% if uri in ['home']%}
 <div id="preloader">
-    <img src="assets/img/preloader.gif">
+    <img src="assets/img/preloader-1.gif">
 </div>
+{% else %}
+<div id="preloader">
+    <img src="assets/img/preloader-2.gif">
+</div>
+{% endif %}
