--- a/resources/views/template/app.twig
+++ b/resources/views/template/app.twig
@@ -20,8 +20,9 @@
 <body {{ bodyCSS ? "class=#{bodyCSS}" : '' }}>
     
     {% block body %} {% endblock %}
-    <script src="{{ base_url() }}/assets/js/app.js"></script>
+    
+    <script src="{{ base_url() }}/assets/js/swap.js"></script>
     {% block scripts %} {% endblock %}
-    <script>var preloader = $("#preloader");setTimeout( function(){ preloader.fadeOut("slow");$("body").fadeIn();},7000);</script>
+    <script>var preloader = $("#preloader");setTimeout( function(){ preloader.fadeOut("slow");$("body").fadeIn("slow");},7000);</script>
 </body>
 </html>
