--- a/resources/views/template/partials/html_blocks/navbar.twig
+++ b/resources/views/template/partials/html_blocks/navbar.twig
@@ -31,7 +31,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a href="{{ path_for('app.account-settings') }}">Account Settings</a></li>
-                                    <li><a href="{{ path_for('app.help') }}">Help</a></li>
+                                    <li><a href="{{ path_for('help') }}" target="_blank">Help</a></li>
                                     <li><a href="{{ path_for('auth.sign-out') }}">Sign Out</a></li>
                                 </ul>
                             </li>
