--- a/resources/views/auth/signup.twig
+++ b/resources/views/auth/signup.twig
@@ -1,4 +1,4 @@
-{% extends 'template/app.twig' %}
+{% extends 'template/website.twig' %}
 
 {% block body %}
     <div id="form-section" class="container-fluid signup">
