--- a/resources/views/website/contact-us.twig
+++ b/resources/views/website/contact-us.twig
@@ -1,4 +1,4 @@
-{% extends 'template/app.twig' %}
+{% extends 'template/website.twig' %}
 {% set pageText = "If you have any concerns, questions or need clarity <br> as may apply to our platform or policies, kindly reach out to us here." %}
 {% block body %}
     <div id="header-holder" class="inner-header contact-header">
