--- a/resources/views/website/home.twig
+++ b/resources/views/website/home.twig
@@ -1,4 +1,4 @@
-{% extends 'template/app.twig' %}
+{% extends 'template/website.twig' %}
 {% block body %}
 {% include 'partials/components/preloader.twig' %}
 
@@ -8,9 +8,9 @@
         <div id="page-head" class="container inner-page">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 text-center">
+                    <div class="col-md-3 col-md-offset-1 text-center">
                         <div class="logo-icon">
-                            <img src="assets/img/logo.png" alt="">
+                            <img src="assets/img/wallet-2.png" alt="">
                         </div>
                     </div>
                     <div class="col-md-7 col-md-offset-1 pl-0 pr-0">
