--- a/resources/views/template/app.twig
+++ b/resources/views/template/app.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
-    <title>{{ app.name }} - {{ pageTitle }}</title>
+    <title>{{ app.name }} | {{ pageTitle }}</title>
     {% if uri in ['not-found-404','not-allowed-405'] %}
     <link rel="stylesheet" type="text/css" href="{{ base_url() }}/assets/css/bootstrap-v4.min.css">
     <link rel="stylesheet" type="text/css" href="{{ base_url() }}/assets/css/uikit.css">
