--- a/resources/views/template/partials/html_blocks/navbar.twig
+++ b/resources/views/template/partials/html_blocks/navbar.twig
@@ -16,7 +16,7 @@
                     {% if user.checkSession %}
                     <div style="height: 1px;" role="main" aria-expanded="false" class="navbar-collapse collapse" id="menu">
                         <ul class="nav navbar-nav navbar-right">
-                            {% if uri in ['home', 'buy-sell', 'about-us', 'contact-us'] %}
+                            {% if uri in ['home', 'buy-sell', 'about-us', 'contact-us', 'help', 'faqs'] %}
                             <li><a href="{{ path_for('home') }}">{{ app.name }}</a></li>
                             <li><a href="{{ path_for('buy-sell') }}">Buy/Sell</a></li>
                             <li><a href="{{ path_for('about-us') }}">About Us</a></li>
