--- a/resources/views/partials/components/rates-home.twig
+++ b/resources/views/partials/components/rates-home.twig
@@ -1,34 +1,40 @@
 <div class="crypto-feature" id="rates">
-    <div class="col-xs-12 col-sm-4 pl-0 pr-0">
-        <div class="crypto-box">
-            <div class="crypto-icon">
-                <img src="{{ base_url() }}/assets/img/coins/bitcoin.png" alt="">
-            </div>
-            <div class="crypto-title">Bitcoin  <span class="bitcoin" v-text="btc.pctchange"></span></div>
-            <div class="crypto-details bitcoin">
-                <small>GHS</small><span v-text="btc.price"></span>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-12 col-sm-4 pl-0 pr-0">
-        <div class="crypto-box">
-            <div class="crypto-icon">
-                <img src="{{ base_url() }}/assets/img/coins/etherum.png" alt="">
-            </div>
-            <div class="crypto-title">Ethereum <span class="ethereum" v-text="eth.pctchange"></span></div>
-            <div class="crypto-details ethereum">
-                <small>GHS</small><span v-text="eth.price"></span>
+    <div class="col-xs-12 col-sm-4">
+        <div class="crypto-outer-div">
+            <div class="crypto-box">
+                <div class="crypto-icon">
+                    <img src="{{ base_url() }}/assets/img/coins/bitcoin.png" alt="">
+                </div>
+                <div class="crypto-title">Bitcoin  <span class="bitcoin" v-text="btc.pctchange"></span></div>
+                <div class="crypto-details bitcoin">
+                    <small>GHS</small><span v-text="btc.price"></span>
+                </div>
             </div>
         </div>
     </div>
-    <div class="col-xs-12 col-sm-4 pl-0 pr-0">
-        <div class="crypto-box">
-            <div class="crypto-icon">
-                <img src="{{ base_url() }}/assets/img/coins/litecoin.png" alt="">
+    <div class="col-xs-12 col-sm-4">
+        <div class="crypto-outer-div">
+            <div class="crypto-box">
+                <div class="crypto-icon">
+                    <img src="{{ base_url() }}/assets/img/coins/etherum.png" alt="">
+                </div>
+                <div class="crypto-title">Ethereum <span class="ethereum" v-text="eth.pctchange"></span></div>
+                <div class="crypto-details ethereum">
+                    <small>GHS</small><span v-text="eth.price"></span>
+                </div>
             </div>
-            <div class="crypto-title">Litecoin <span class="litecoin" v-text="ltc.pctchange"></span></div>
-            <div class="crypto-details litecoin">
-                <small>GHS</small><span v-text="ltc.price"></span>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-4">
+        <div class="crypto-outer-div">
+            <div class="crypto-box">
+                <div class="crypto-icon">
+                    <img src="{{ base_url() }}/assets/img/coins/litecoin.png" alt="">
+                </div>
+                <div class="crypto-title">Litecoin <span class="litecoin" v-text="ltc.pctchange"></span></div>
+                <div class="crypto-details litecoin">
+                    <small>GHS</small><span v-text="ltc.price"></span>
+                </div>
             </div>
         </div>
     </div>
