--- a/resources/views/template/partials/hero/create-account.twig
+++ b/resources/views/template/partials/hero/create-account.twig
@@ -7,7 +7,7 @@
             </div>
             <div class="col-sm-12 col-md-6">
                 <div class="buttons-holder">
-                    <a href="{{ path_for('auth.sign-up') }}" class="ybtn ybtn-accent-color">Create Your Account</a><a href="{{ path_for('contact-us') }}" class="ybtn ybtn-white">Contact Us</a>
+                    <a href="{{ path_for('auth.sign-up') }}" class="ybtn ybtn-accent-color">Sign Up</a><a href="{{ path_for('contact-us') }}" class="ybtn ybtn-white">Contact Us</a>
                 </div>
             </div>
         </div>
