--- a/resources/views/template/website.twig
+++ b/resources/views/template/website.twig
@@ -23,6 +23,6 @@
     
     <script src="{{ base_url() }}/assets/js/swap.js"></script>
     {% block scripts %} {% endblock %}
-    <script>var preloader = $("#preloader");setTimeout( function(){ preloader.fadeOut("slow");$("body").fadeIn("slow");},7000);</script>
+    <script>//var preloader = $("#preloader");setTimeout( function(){ preloader.fadeOut("slow");$("body").fadeIn("slow");},7000);</script>
 </body>
 </html>
