--- a/resources/views/template/partials/html_blocks/navbar.twig
+++ b/resources/views/template/partials/html_blocks/navbar.twig
@@ -1,4 +1,4 @@
-<nav id="nav" class="navbar navbar-default navbar-full">
+<nav id="nav" class="navbar navbar-default navbar-full {{ uri in ['dashboard','buy','sell','trade'] ? "navbar-fixed-top" : '' }}">
     <div class="container-fluid">
         <div class="container container-nav">
             <div class="row">
