--- a/resources/views/app/trade.twig
+++ b/resources/views/app/trade.twig
@@ -1,4 +1,8 @@
 {% extends 'template/app.twig' %}
 {% block main %}
-    {% include 'partials/forms/trade/post-ad.twig' %}
+    <div class="panel panel-default">
+        <div class="panel-body">
+            {% include 'partials/forms/trade/post-ad.twig' %}
+        </div>
+    </div>
 {% endblock %}
