--- a/resources/views/partials/components/rates-home.twig
+++ b/resources/views/partials/components/rates-home.twig
@@ -7,7 +7,7 @@
                 </div>
                 <div class="crypto-title">Bitcoin  <span class="bitcoin" v-text="btc.pctchange"></span></div>
                 <div class="crypto-details bitcoin">
-                    <small>GHS</small><span v-text="btc.price"></span>
+                    <small>GHS</small><span v-text="btc.priceghsformatted"></span>
                 </div>
             </div>
         </div>
@@ -20,7 +20,7 @@
                 </div>
                 <div class="crypto-title">Ethereum <span class="ethereum" v-text="eth.pctchange"></span></div>
                 <div class="crypto-details ethereum">
-                    <small>GHS</small><span v-text="eth.price"></span>
+                    <small>GHS</small><span v-text="eth.priceghsformatted"></span>
                 </div>
             </div>
         </div>
@@ -33,7 +33,7 @@
                 </div>
                 <div class="crypto-title">Litecoin <span class="litecoin" v-text="ltc.pctchange"></span></div>
                 <div class="crypto-details litecoin">
-                    <small>GHS</small><span v-text="ltc.price"></span>
+                    <small>GHS</small><span v-text="ltc.priceghsformatted"></span>
                 </div>
             </div>
         </div>
