--- a/resources/views/website/home.twig
+++ b/resources/views/website/home.twig
@@ -8,7 +8,7 @@
         <div id="page-head" class="container inner-page">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3 col-md-offset-1 text-center">
+                    <div class="col-md-4 text-center">
                         <div class="logo-icon">
                             <img src="assets/img/wallet-2.png" alt="">
                         </div>
